center icons properly on buttons that only have one icon

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -39,6 +39,9 @@
     &:last-child
       margin-left: 4px
       margin-right: -2px
+    &:only-child
+      margin-left: -2px
+      margin-right: -2px
   &:hover,
   &:focus,
   &.is-active
