--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -25,8 +25,6 @@
 
 .modal-card
   @extend .modal-content
-  background-color: $white
-  border-radius: $radius-large
   display: flex
   flex-direction: column
   max-height: calc(100vh - 40px)
@@ -44,6 +42,8 @@
 
 .modal-card-head
   border-bottom: 1px solid $border
+  border-top-left-radius: $radius-large
+  border-top-right-radius: $radius-large
 
 .modal-card-title
   color: $text-strong
@@ -53,14 +53,17 @@
   line-height: 1
 
 .modal-card-foot
+  border-bottom-left-radius: $radius-large
+  border-bottom-right-radius: $radius-large
   border-top: 1px solid $border
   .button
     &:not(:last-child)
       margin-right: 10px
 
 .modal-card-body
+  background-color: $white
   flex-grow: 1
-  flex-shrink: 0
+  flex-shrink: 1
   overflow: auto
   padding: 20px
 
