--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -100,5 +100,8 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 .is-marginless
   margin: 0 !important
 
+.is-paddingless
+  padding: 0 !important
+
 .is-unselectable
   @extend .unselectable
