--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -10,13 +10,21 @@ $grey-light: #d3d6db !default
 $grey-lighter: #f5f7fa !default
 $white: #fff !default
 
-$blue: #42afe3 !default
-$green: #97cd76 !default
-$orange: #f68b39 !default
-$purple: #847bb9 !default
-$red: #ed6c63 !default
-$turquoise: #1fc8db !default
-$yellow: #fce473 !default
+// $blue: #42afe3 !default
+// $green: #97cd76 !default
+// $orange: #f68b39 !default
+// $purple: #847bb9 !default
+// $red: #ed6c63 !default
+// $turquoise: #1fc8db !default
+// $yellow: #fce473 !default
+
+$orange:    hsl(14,  100%, 53%) !default
+$yellow:    hsl(48,  100%, 53%) !default
+$green:     hsl(141, 86%,  53%) !default
+$turquoise: hsl(171, 86%,  48%) !default
+$blue:      hsl(217, 100%, 53%) !default
+$purple:    hsl(271, 100%, 71%) !default
+$red:       hsl(348, 100%, 53%) !default
 
 // Typography
 
