Add new svg logo

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -85,6 +85,10 @@ $twitter: #55acee
   margin-bottom: 40px
   vertical-align: top
   width: 240px
+  svg
+    display: block
+    height: 240px
+    width: 240px
   +mobile
     border-radius: 10px
     height: 120px
