--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -1,3 +1,6 @@
+@import "../elements/other.sass"
+@import "../utilities/mixins.sass"
+
 // Display
 
 $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
