--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -1,3 +1,7 @@
+@import "../elements/other.sass"
+@import "../utilities/mixins.sass"
+@import "../utilities/variables.sass"
+
 .modal-background
   +overlay
   background-color: rgba($black, 0.86)
