--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,3 +1,7 @@
+@import "../elements/other.sass"
+@import "../utilities/controls.sass"
+@import "../utilities/variables.sass"
+
 =button-small
   border-radius: $radius-small
   font-size: 11px
