--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -235,7 +235,7 @@ $structure-invert: $danger-invert
   position: relative
   .copy,
   .expand
-    @extend .unselectable
+    @extend %unselectable
     background: $white
     border: solid $border
     border-width: 0 0 1px 1px
