--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -1,4 +1,4 @@
-@import "../elements/other.sass"
+@import "./placeholders.sass"
 @import "../utilities/mixins.sass"
 
 // Display
@@ -107,4 +107,4 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   padding: 0 !important
 
 .is-unselectable
-  @extend .unselectable
+  @extend %unselectable
