--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,4 +1,4 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
@@ -37,7 +37,7 @@
     justify-content: flex-end
 
 .level
-  @extend .block
+  @extend %block
   align-items: center
   justify-content: space-between
   code
