--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -1,4 +1,4 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/functions.sass"
 @import "../utilities/variables.sass"
 
@@ -21,7 +21,7 @@
     border-top: none
 
 .message
-  @extend .block
+  @extend %block
   background-color: $background
   border-radius: $radius
   // Colors
