--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -1,4 +1,4 @@
-@import "../elements/other.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
@@ -6,7 +6,8 @@
   +overlay
   background-color: rgba($black, 0.86)
 
-.modal-content
+.modal-content,
+.modal-card
   margin: 0 20px
   max-height: calc(100vh - 160px)
   overflow: auto
@@ -19,7 +20,7 @@
     width: 640px
 
 .modal-close
-  @extend .delete
+  @extend %delete
   background: none
   height: 40px
   position: fixed
@@ -28,7 +29,6 @@
   width: 40px
 
 .modal-card
-  @extend .modal-content
   display: flex
   flex-direction: column
   max-height: calc(100vh - 40px)
