--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -1,10 +1,9 @@
-@import "../base/classes.sass"
-@import "../elements/other.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/variables.sass"
 
 .tabs
-  @extend .block
-  @extend .unselectable
+  @extend %block
+  @extend %unselectable
   align-items: stretch
   display: flex
   justify-content: space-between
