--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,4 +1,4 @@
-@import "../elements/other.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/controls.sass"
 @import "../utilities/variables.sass"
 
@@ -22,7 +22,7 @@
 
 .button
   +control
-  @extend .unselectable
+  @extend %unselectable
   justify-content: center
   padding-left: 10px
   padding-right: 10px
@@ -109,6 +109,6 @@
     color: transparent !important
     pointer-events: none
     &:after
-      @extend .loader
+      @extend %loader
       +center(16px)
       position: absolute !important
