--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -1,8 +1,8 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/variables.sass"
 
 .content
-  @extend .block
+  @extend %block
   color: $text
   // Inline
   a:not(.button)
