--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,9 +1,9 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
 .notification
-  @extend .block
+  @extend %block
   +clearfix
   background-color: $background
   border-radius: $radius
