--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -1,8 +1,8 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/variables.sass"
 
 .progress
-  @extend .block
+  @extend %block
   -moz-appearance: none
   -webkit-appearance: none
   border: none
