--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,8 +1,8 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/variables.sass"
 
 .box
-  @extend .block
+  @extend %block
   background-color: $white
   border-radius: $radius-large
   box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
