--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -1,4 +1,4 @@
-@import "../elements/other.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/controls.sass"
 @import "../utilities/mixins.sass"
 
@@ -9,7 +9,8 @@
     &.is-#{$name}
       border-color: $color
 
-.input
+.input,
+.textarea
   +form-control
   box-shadow: inset 0 1px 2px rgba($black, 0.1)
   max-width: 100%
@@ -32,7 +33,6 @@
     width: auto
 
 .textarea
-  @extend .input
   display: block
   line-height: 1.2
   max-height: 600px
@@ -257,7 +257,7 @@
         flex-shrink: 1
   &.is-loading
     &:after
-      @extend .loader
+      @extend %loader
       position: absolute !important
       right: 8px
       top: 8px
