--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,10 +1,10 @@
-@import "../base/classes.sass"
+@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
 .title,
 .subtitle
-  @extend .block
+  @extend %block
   font-weight: $weight-title-normal
   word-break: break-word
   em,
