Add minireset, Fix color luminance

--- a/bulma.sass
+++ b/bulma.sass
@@ -1,6 +1,7 @@
 @charset "utf-8"
 
-@import "sass/base/base"
-@import "sass/elements/elements"
-@import "sass/components/components"
-@import "sass/layout/layout"
+@import "sass/base/base.sass"
+@import "sass/elements/elements.sass"
+@import "sass/components/components.sass"
+@import "sass/layout/layout.sass"
+@import "sass/utilities/mixins.sass"
