--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -68,18 +68,13 @@
 
 {% if page.route == 'index' %}
   <style type="text/css">
-    @media screen and (max-width: 979px) {
-      .title.is-2 .icon.is-large {
-        display: none;
-      }
-    }
-
     .title.is-2 {
       position: relative;
     }
 
     .title.is-2 a {
       color: #222324;
+      padding-left: 60px;
     }
 
     .title.is-2 a:hover {
@@ -87,7 +82,7 @@
     }
 
     .title.is-2 .icon.is-large {
-      left: -72px;
+      left: 0;
       position: absolute;
       top: -1px;
     }
@@ -98,6 +93,16 @@
 
     .hero .title.is-2 a:hover {
       color: white;
+    }
+
+    @media screen and (max-width: 979px) {
+      .title.is-2 a {
+        padding-left: 0;
+      }
+
+      .title.is-2 .icon.is-large {
+        display: none;
+      }
     }
   </style>
 {% endif %}
