--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -52,7 +52,6 @@ $carbon-space: 15px
   .carbon-text
     display: block
     color: $text-strong
-    margin-bottom: 5px
     margin-left: 130px + $carbon-space
   .carbon-poweredby
     font-size: $size-small
@@ -235,7 +234,7 @@ $structure-invert: $danger-invert
   position: relative
   .copy,
   .expand
-    @extend %unselectable
+    +unselectable
     background: $white
     border: solid $border
     border-width: 0 0 1px 1px
