--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,4 +1,3 @@
-@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
@@ -37,7 +36,7 @@
     justify-content: flex-end
 
 .level
-  @extend %block
+  +block
   align-items: center
   justify-content: space-between
   code
