--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -1,4 +1,3 @@
-@import "../base/placeholders.sass"
 @import "../utilities/functions.sass"
 @import "../utilities/variables.sass"
 
@@ -21,7 +20,7 @@
     border-top: none
 
 .message
-  @extend %block
+  +block
   background-color: $background
   border-radius: $radius
   // Colors
