--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -1,4 +1,3 @@
-@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
@@ -20,7 +19,7 @@
     width: 640px
 
 .modal-close
-  @extend %delete
+  +delete
   background: none
   height: 40px
   position: fixed
