--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -1,9 +1,9 @@
-@import "../base/placeholders.sass"
+@import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
 .tabs
-  @extend %block
-  @extend %unselectable
+  +block
+  +unselectable
   align-items: stretch
   display: flex
   justify-content: space-between
