--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -1,4 +1,3 @@
-@import "../base/placeholders.sass"
 @import "../utilities/controls.sass"
 @import "../utilities/variables.sass"
 
@@ -22,7 +21,8 @@
 
 .button
   +control
-  @extend %unselectable
+  +unselectable
+  cursor: pointer
   justify-content: center
   padding-left: 10px
   padding-right: 10px
@@ -109,6 +109,6 @@
     color: transparent !important
     pointer-events: none
     &:after
-      @extend %loader
+      +loader
       +center(16px)
       position: absolute !important
