--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -1,8 +1,7 @@
-@import "../base/placeholders.sass"
 @import "../utilities/variables.sass"
 
 .content
-  @extend %block
+  +block
   color: $text
   // Inline
   a:not(.button)
