--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -1,6 +1,8 @@
-@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
+
+.block
+  +block
 
 .container
   position: relative
@@ -14,10 +16,16 @@
   +widescreen
     max-width: 1200px
 
+.delete
+  +delete
+
 .fa
   font-size: 21px
   text-align: center
   vertical-align: top
+
+.hamburger
+  +hamburger
 
 .icon
   +fa(21px, 24px)
@@ -40,7 +48,7 @@
   text-transform: uppercase
 
 .highlight
-  @extend %block
+  +block
   font-size: 12px
   font-weight: normal
   max-width: 100%
@@ -49,6 +57,9 @@
   pre
     overflow: auto
     max-width: 100%
+
+.loader
+  +loader
 
 .number
   background-color: $background
