--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -1,4 +1,3 @@
-@import "./placeholders.sass"
 @import "../utilities/mixins.sass"
 
 // Display
@@ -107,4 +106,4 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   padding: 0 !important
 
 .is-unselectable
-  @extend %unselectable
+  +unselectable
