--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -1,11 +1,10 @@
-@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
 // Components
 
 .nav-toggle
-  @extend %hamburger
+  +hamburger
   // Responsiveness
   +tablet
     display: none
