--- a/sass/elements/progress.sass
+++ b/sass/elements/progress.sass
@@ -1,8 +1,7 @@
-@import "../base/placeholders.sass"
 @import "../utilities/variables.sass"
 
 .progress
-  @extend %block
+  +block
   -moz-appearance: none
   -webkit-appearance: none
   border: none
