--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,10 +1,9 @@
-@import "../base/placeholders.sass"
 @import "../utilities/mixins.sass"
 @import "../utilities/variables.sass"
 
 .title,
 .subtitle
-  @extend %block
+  +block
   font-weight: $weight-title-normal
   word-break: break-word
   em,
