--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -95,6 +95,10 @@
       color: white;
     }
 
+    a.column:hover .title strong {
+      border-bottom: 1px solid;
+    }
+
     @media screen and (max-width: 979px) {
       .title.is-2 a {
         padding-left: 0;
