--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -240,6 +240,7 @@ $structure-invert: $danger-invert
     border: solid $border
     border-width: 0 0 1px 1px
     color: $text-light
+    cursor: pointer
     outline: none
     position: absolute
     right: 0
