--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -160,7 +160,7 @@ hr {
   border: none;
   display: block;
   height: 1px;
-  margin: 40px 0;
+  margin: 20px 0;
 }
 
 img {
@@ -2613,12 +2613,13 @@ a.box:active {
   user-select: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  background-color: rgba(18, 18, 18, 0.2);
+  background-color: rgba(18, 18, 18, 0.1);
   border: none;
   border-radius: 290486px;
   cursor: pointer;
   display: inline-block;
   height: 24px;
+  outline: none;
   position: relative;
   vertical-align: top;
   width: 24px;
@@ -2646,7 +2647,7 @@ a.box:active {
 }
 
 .delete:hover {
-  background-color: rgba(18, 18, 18, 0.5);
+  background-color: rgba(18, 18, 18, 0.2);
 }
 
 .delete.is-small {
@@ -3641,12 +3642,13 @@ a.box:active {
   user-select: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  background-color: rgba(18, 18, 18, 0.2);
+  background-color: rgba(18, 18, 18, 0.1);
   border: none;
   border-radius: 290486px;
   cursor: pointer;
   display: inline-block;
   height: 24px;
+  outline: none;
   position: relative;
   vertical-align: top;
   width: 24px;
@@ -3680,7 +3682,7 @@ a.box:active {
 }
 
 .modal-close:hover {
-  background-color: rgba(18, 18, 18, 0.5);
+  background-color: rgba(18, 18, 18, 0.2);
 }
 
 .modal-close.is-small {
@@ -4367,6 +4369,7 @@ a.panel-block:hover {
 }
 
 .column {
+  display: block;
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
@@ -5137,6 +5140,7 @@ a.panel-block:hover {
 
 .tile {
   align-items: stretch;
+  display: block;
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
@@ -6529,6 +6533,7 @@ body.page-grid .column > .notification {
   border: solid #dbdbdb;
   border-width: 0 0 1px 1px;
   color: #b5b5b5;
+  cursor: pointer;
   outline: none;
   position: absolute;
   right: 0;
