--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -73,12 +73,12 @@
     }
 
     .title.is-2 a {
-      color: #222324;
+      color: #242424;
       padding-left: 60px;
     }
 
     .title.is-2 a:hover {
-      color: #1fc8db;
+      color: #11e4c4;
     }
 
     .title.is-2 .icon.is-large {
@@ -95,7 +95,12 @@
       color: white;
     }
 
-    a.column:hover .title strong {
+    .hero.is-primary a.column,
+    .hero.is-primary a.column:hover {
+      color: white;
+    }
+
+    .hero.is-primary a.column:hover .title strong {
       border-bottom: 1px solid;
     }
 
