--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6311,11 +6311,15 @@ body.page-grid .column > .notification {
 }
 
 @keyframes floatUp {
-  from {
+  0% {
     box-shadow: 0 0 0 rgba(18, 18, 18, 0), 0 0 0 rgba(18, 18, 18, 0), 0 0 0 rgba(18, 18, 18, 0);
     transform: scale(0.86);
   }
-  to {
+  67% {
+    box-shadow: 0 0 0 rgba(18, 18, 18, 0), 0 5px 10px rgba(18, 18, 18, 0.1), 0 1px 1px rgba(18, 18, 18, 0.2);
+    transform: scale(1);
+  }
+  100% {
     box-shadow: 0 20px 60px rgba(18, 18, 18, 0.05), 0 5px 10px rgba(18, 18, 18, 0.1), 0 1px 1px rgba(18, 18, 18, 0.2);
     transform: scale(1);
   }
@@ -6358,7 +6362,7 @@ body.page-grid .column > .notification {
 
 #b {
   animation-delay: 1s;
-  animation-duration: 1s;
+  animation-duration: 1.5s;
   animation-fill-mode: both;
   animation-name: floatUp;
   animation-timing-function: cubic-bezier(0, 0.71, 0.29, 1);
@@ -6668,4 +6672,14 @@ body.page-grid .column > .notification {
 #newsletter .input {
   border-color: white;
   box-shadow: none;
+}
+
+html ::-moz-selection {
+  background: #11e4c4;
+  color: white;
+}
+
+html ::selection {
+  background: #11e4c4;
+  color: white;
 }
