--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -6,7 +6,7 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/bulma-docs.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -26,9 +26,9 @@
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="{{ site.baseurl }}/favicons/manifest.json">
-  <link rel="mask-icon" href="{{ site.baseurl }}/favicons/safari-pinned-tab.svg" color="#1fc8db">
+  <link rel="mask-icon" href="{{ site.baseurl }}/favicons/safari-pinned-tab.svg" color="#11e4c4">
   <link rel="shortcut icon" href="{{ site.baseurl }}/favicons/favicon.ico">
-  <meta name="msapplication-TileColor" content="#1fc8db">
+  <meta name="msapplication-TileColor" content="#11e4c4">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicons/mstile-144x144.png">
   <meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
