--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -78,10 +78,13 @@ $twitter: #55acee
     color: $white
 
 @keyframes floatUp
-  from
+  0%
     box-shadow: 0 0 0 rgba($black, 0), 0 0 0 rgba($black, 0), 0 0 0 rgba($black, 0)
     transform: scale(0.86)
-  to
+  67%
+    box-shadow: 0 0 0 rgba($black, 0), 0 5px 10px rgba($black, 0.1), 0 1px 1px rgba($black, 0.2)
+    transform: scale(1)
+  100%
     box-shadow: 0 20px 60px rgba($black, 0.05), 0 5px 10px rgba($black, 0.1), 0 1px 1px rgba($black, 0.2)
     transform: scale(1)
 
@@ -114,7 +117,7 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
 
 #b
   animation-delay: 1s
-  animation-duration: 1s
+  animation-duration: 1.5s
   animation-fill-mode: both
   animation-name: floatUp
   animation-timing-function: $curve
@@ -340,3 +343,11 @@ $structure-invert: $danger-invert
   .input
     border-color: $white
     box-shadow: none
+
+html
+  \::-moz-selection
+    background: $primary
+    color: $primary-invert
+  \::selection
+    background: $primary
+    color: $primary-invert
