Add table variables

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -113,6 +113,22 @@ $twitter: #55acee
     opacity: 0
     transform: scale(1)
 
+@keyframes slideDown
+  0%
+    opacity: 0
+    transform: translateY(-10px)
+  100%
+    opacity: 1
+    transform: translateY(0)
+
+@keyframes slideUp
+  0%
+    opacity: 0
+    transform: translateY(10px)
+  100%
+    opacity: 1
+    transform: translateY(0)
+
 $curve: cubic-bezier(0, 0.71, 0.29, 1)
 
 #b
@@ -161,7 +177,17 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
     height: 120px
     width: 120px
 
+#bulma
+  animation: slideDown 500ms both
+  animation-delay: 1s
+
+#modern-framework
+  animation: slideUp 500ms both
+  animation-delay: 1.2s
+
 #npm
+  animation: fadeIn 500ms both
+  animation-delay: 1.4s
   background: none
   margin: -10px 0 20px
   code
@@ -170,6 +196,18 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
     display: inline-block
     font-size: 16px
     padding: 16px 32px
+
+#ghbtns
+  animation: slideDown 500ms both
+  animation-delay: 1.6s
+
+#carbon
+  animation: slideUp 500ms both
+  animation-delay: 1.8s
+
+#download
+  animation: fadeIn 500ms both
+  animation-delay: 2s
 
 #grid
   .notification
