Fix index carbon

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -201,7 +201,7 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
   animation: slideDown 500ms both
   animation-delay: 1.6s
 
-#carbon
+html.route-index #carbon
   animation: slideUp 500ms both
   animation-delay: 1.8s
 
