--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6387,7 +6387,7 @@ body.page-grid .column > .notification {
   animation-delay: 1.6s;
 }
 
-#carbon {
+html.route-index #carbon {
   animation: slideUp 500ms both;
   animation-delay: 1.8s;
 }
