Add new favicons

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -2,9 +2,9 @@
   <div class="nav-left">
     <a class="nav-item is-brand" href="{{ site.baseurl }}/">
       {% if page.route == 'index' %}
-        <img src="{{ site.baseurl }}/images/bulma.png" alt="{{ site.title }}">
+        <img src="{{ site.baseurl }}/images/bulma-type.png" alt="{{ site.title }}">
       {% else %}
-        <img src="{{ site.baseurl }}/images/bulma-white.png" alt="{{ site.title }}">
+        <img src="{{ site.baseurl }}/images/bulma-type-white.png" alt="{{ site.title }}">
       {% endif %}
     </a>
   </div>
