--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -34,7 +34,7 @@ $nav-height: 50px !default
 
 .nav-item a,
 a.nav-item
-  color: $text
+  color: $text-light
   &:hover
     color: $link-hover
   // Modifiers
