--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -434,7 +434,7 @@ doc-subtab: hero
           <div class="container">
             <div class="nav-left">
               <a class="nav-item">
-                <img src="{{ site.baseurl }}/images/bulma-white.png" alt="Logo">
+                <img src="{{ site.baseurl }}/images/bulma-type-white.png" alt="Logo">
               </a>
             </div>
             <span class="nav-toggle">
@@ -513,7 +513,7 @@ doc-subtab: hero
       <div class="container">
         <div class="nav-left">
           <a class="nav-item">
-            <img src="images/bulma-white.png" alt="Logo">
+            <img src="images/bulma-type-white.png" alt="Logo">
           </a>
         </div>
         <span class="nav-toggle">
@@ -581,7 +581,7 @@ doc-subtab: hero
           <div class="container">
             <div class="nav-left">
               <a class="nav-item">
-                <img src="{{ site.baseurl }}/images/bulma-white.png" alt="Logo">
+                <img src="{{ site.baseurl }}/images/bulma-type-white.png" alt="Logo">
               </a>
             </div>
             <span class="nav-toggle">
@@ -660,7 +660,7 @@ doc-subtab: hero
       <div class="container">
         <div class="nav-left">
           <a class="nav-item">
-            <img src="images/bulma-white.png" alt="Logo">
+            <img src="images/bulma-type-white.png" alt="Logo">
           </a>
         </div>
         <span class="nav-toggle">
@@ -728,7 +728,7 @@ doc-subtab: hero
           <div class="container">
             <div class="nav-left">
               <a class="nav-item">
-                <img src="{{ site.baseurl }}/images/bulma-white.png" alt="Logo">
+                <img src="{{ site.baseurl }}/images/bulma-type-white.png" alt="Logo">
               </a>
             </div>
             <span class="nav-toggle">
@@ -807,7 +807,7 @@ doc-subtab: hero
       <div class="container">
         <div class="nav-left">
           <a class="nav-item">
-            <img src="images/bulma-white.png" alt="Logo">
+            <img src="images/bulma-type-white.png" alt="Logo">
           </a>
         </div>
         <span class="nav-toggle">
