Fix docs mobile version

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -75,6 +75,7 @@
     .title.is-2 a {
       color: #242424;
       padding-left: 60px;
+      position: relative;
     }
 
     .title.is-2 a:hover {
