--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -4,7 +4,6 @@
 @import "../sass/utilities/mixins.sass"
 
 // Override
-
 .button
   +tablet
     small
@@ -25,13 +24,15 @@ body.page-grid .column > .notification
     margin-left: 10px
 
 // Additional
+svg
+  max-height: 100%
+  max-width: 100%
 
 $carbon-space: 15px
 
 #carbon
   max-width: 340px
   min-height: 100px + ($carbon-space * 2)
-  min-width: 300px
   padding: $carbon-space
   +tablet
     margin-left: auto
@@ -137,7 +138,7 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
   animation-fill-mode: both
   animation-name: floatUp
   animation-timing-function: $curve
-  border-radius: 20px
+  border-radius: 24px
   display: inline-block
   height: 240px
   margin-bottom: 40px
@@ -173,9 +174,9 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
         fill: $turquoise
 
   +mobile
-    border-radius: 10px
-    height: 120px
-    width: 120px
+    border-radius: 16px
+    height: 160px
+    width: 160px
 
 #bulma
   animation: slideDown 500ms both
@@ -232,7 +233,7 @@ html.route-index #carbon
 #social
   align-items: center
   display: flex
-  height: 20px
+  flex-wrap: wrap
   margin-bottom: 1em
   justify-content: center
   a
@@ -240,8 +241,9 @@ html.route-index #carbon
     font-size: 11px
     height: 20px
     line-height: 20px
-  iframe:last-child
-    margin-left: 10px
+    margin: 5px
+  iframe
+    margin: 5px
 
 #images
   tr
