--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -14,6 +14,8 @@ $nav-height: 50px !default
 .nav-item
   align-items: center
   display: flex
+  flex-grow: 0
+  flex-shrink: 0
   justify-content: center
   padding: 10px
   a
