Large twitter image

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -21,7 +21,7 @@
   <meta property="og:image:height" content="630">
   <meta property="og:description" content="{{site.description}}">
 
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jgthms">
   <meta name="twitter:creator" content="@jgthms">
   <meta name="twitter:title" content="{{site.title}}">
