Fix pagination breaking with non-default button sizes.

--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -4,7 +4,7 @@
   justify-content: center
   text-align: center
   a
-    display: block
+    display: flex
     min-width: 32px
     padding: 3px 8px
   span
