--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3245,7 +3245,6 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3759,7 +3758,6 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -4081,7 +4079,9 @@ a.nav-item.is-tab.is-active {
 }
 
 .pagination a {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   min-width: 32px;
   padding: 3px 8px;
 }
@@ -5396,7 +5396,6 @@ a.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
 }
 
@@ -5419,7 +5418,6 @@ a.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: auto;
@@ -7123,7 +7121,6 @@ html.route-index #carbon {
 .structure-item.is-structure-container:after {
   -webkit-box-align: start;
       -ms-flex-align: start;
-              -ms-grid-row-align: flex-start;
           align-items: flex-start;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
