Add @media print to tablet mixin

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -188,7 +188,7 @@ $widescreen: 1180px !default
     @content
 
 =tablet
-  @media screen and (min-width: $tablet)
+  @media screen and (min-width: $tablet), print
     @content
 
 =tablet-only
