adds a sticky footer to to the framework per the Trello roadmap 2do

--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -51,4 +51,48 @@ doc-subtab: footer
 </footer>
 {% endhighlight %}
   </div>
+  <div class="container">
+    <h1 class="title">Sticky Footer</h1>
+    <h2 class="subtitle">
+      A modification to the original <strong>footer</strong> which will stick it to the bottom of the page.
+    </h2>
+
+<div class="example">
+<footer class="footer sticky">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
+      </p>
+      <p>
+        <a class="icon" href="https://github.com/jgthms/bulma">
+          <i class="fa fa-github"></i>
+        </a>
+      </p>
+    </div>
+  </div>
+</footer>
+</div>
+
+{% highlight html %}
+<footer class="footer sticky">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
+      </p>
+      <p>
+        <a class="icon" href="https://github.com/jgthms/bulma">
+          <i class="fa fa-github"></i>
+        </a>
+      </p>
+    </div>
+  </div>
+</footer>
+{% endhighlight %}
+  </div>
 </section>
