ran the npm scripts

--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -11,7 +11,7 @@
         border-bottom: 1px solid $border
         &:hover
           border-bottom-color: $link
-  .sticky
+  &.sticky
     position: fixed
     right: 0
     left: 0
