--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3245,7 +3245,6 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3759,7 +3758,6 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -5396,7 +5394,6 @@ a.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
 }
 
@@ -5419,7 +5416,6 @@ a.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: auto;
@@ -6542,6 +6538,14 @@ a.panel-block:hover {
   border-bottom-color: #00d1b2;
 }
 
+.footer .sticky {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
 @media screen and (min-width: 769px) {
   .button small {
     color: #4a4a4a;
@@ -7123,7 +7127,6 @@ html.route-index #carbon {
 .structure-item.is-structure-container:after {
   -webkit-box-align: start;
       -ms-flex-align: start;
-              -ms-grid-row-align: flex-start;
           align-items: flex-start;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
